--- a/src/main/resources/static/templates/empForm.html
+++ b/src/main/resources/static/templates/empForm.html
@@ -1,5 +1,5 @@
 <!-- Form used to add new entries of employee in database -->
-<form class="form-horizontal alert alert-warning" name="empList" id="empForm" ng-submit="insertInfo(empInfo);" hidden>
+<form id="popupContainer" class="form-horizontal alert alert-warning" name="empList" id="empForm" ng-submit="insertInfo(empInfo);" hidden>
     <h3 class="text-center">Insert Client Details Into Database</h3>
     <div class="form-group">
         <label for="Name">Client Name:</label>
