--- a/src/main/resources/static/templates/editForm.html
+++ b/src/main/resources/static/templates/editForm.html
@@ -18,6 +18,23 @@
         <input type="email" class="form-control" ng-model="currentUser.email" value="{{currentUser.email}}">
     </div>
     <div class="form-group">
-        <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="updateMsg(currentUser.id)">Update</button>
+        <button class="btn btn-warning" ng-disabled="empList.$invalid" data-toggle="modal" data-target="#myModal">Update</button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">User updated.</h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
     </div>
 </form>
