Update forms changed into mdDialogs

--- a/src/main/resources/static/templates/clientForm.html
+++ b/src/main/resources/static/templates/clientForm.html
@@ -18,7 +18,7 @@
         <!--<div ng-include src="'templates/clientCreateForm.html'"></div>-->
 
         <!-- Include form template which is used to edit and update data into database -->
-        <div ng-include src="'templates/editForm.html'"></div>
+        <!--<div ng-include src="'templates/editForm.html'"></div>-->
 
     </div>
     <div class="clearfix"></div>
@@ -40,7 +40,7 @@
                 <td>{{detail.phone}}</td>
                 <td>{{detail.email}}</td>
                 <td>
-                    <button class="btn btn-warning" ng-click="editInfo(detail)" title="Edit"><span
+                    <button class="btn btn-warning" ng-click="showUpdateClient($event,detail)" title="Edit"><span
                             class="glyphicon glyphicon-edit"></span></button>
                     <button class="btn btn-danger" title="Delete" ng-click="deleteInfo(detail)"><span
                             class="glyphicon glyphicon-trash"></span></button>
