Plan added and details about contract

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -139,6 +139,11 @@ section{
     width: 60%;
     height: auto;
 }
+#mainlogo{
+    margin-bottom: 30px;
+    width: 100%;
+    height: auto;
+}
 <!-- sidebar -->
 #wrapper {
     padding-left: 0;
