--- a/src/main/resources/static/templates/about.html
+++ b/src/main/resources/static/templates/about.html
@@ -50,11 +50,18 @@
                 <div>
                     <div class="panel panel-default">
                         <p class="panel-body">
-                            Questions explained agreeable preferred strangers too him her son. Set put shyness offices his females him distant. Improve has message besides shy himself cheered however how son. Quick judge other leave ask first chief her. Indeed or remark always silent seemed narrow be. Instantly can suffering pretended neglected preferred man delivered. Perhaps fertile brandon do imagine to cordial cottage.
+                            •	W systemie istnieje możliwość zalogowania oraz rejestracji.
+                            •	System, w zależności od zalogowanego na nim użytkownika, daje dostęp do wielu funkcjonalności. Podział jest następujący:
+                            a)	Jeśli użytkownik jest administratorem to ma on możliwość:
+                            - dodawania i usuwania rekordów z wybranych tabel bazy danych,
+                            - aktualizowania danych w istniejących rekordach tabel,
+                            - przeglądania zawartości wszystkich tabel.
+                            b)	Jeśli użytkownik jest osobą posiadającą konto na stronie to ma on możliwość:
+                            - przeglądania zawartości rozkładu zajęc, w którym zawarte są godziny i  dni odbywania się wszystkich zajęć dostępnych w ofercie szkoly tanca,
+                            -  danych umieszonych na jego karnecie ( jeśli go posiada ).
+                            - zniżkach, które posiada. ( jeśli posiada karnet )
+                            c)	Jeśli strone przegląd osoba bez konta to dostępne są na niej jedynie informacje na temat szkoły tańca, instruktorów prowadzących tam zajęcia oraz rozkładu zajęć.
 
-                            Ever man are put down his very. And marry may table him avoid. Hard sell it were into it upon. He forbade affixed parties of assured to me windows. Happiness him nor she disposing provision. Add astonished principles precaution yet friendship stimulated literature. State thing might stand one his plate. Offending or extremity therefore so difficult he on provision. Tended depart turned not are.
-
-                            New the her nor case that lady paid read. Invitation friendship travelling eat everything the out two. Shy you who scarcely expenses debating hastened resolved. Always polite moment on is warmth spirit it to hearts. Downs those still witty an balls so chief so. Moment an little remain no up lively no. Way brought may off our regular country towards adapted cheered.
                         </p>
                     </div>
                     <div class="navbar navbar-default navbar-bottom">
