--- a/src/main/resources/static/templates/login-form.html
+++ b/src/main/resources/static/templates/login-form.html
@@ -1,70 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Login/Register</title>
-    <link href="../css/login.css" rel="stylesheet">
-    <!-- Include Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
-    <!-- Include jQuery library -->
-    <script src="../js/jQuery/jquery-3.1.1.min.js"></script>
-    <!-- Include AngularJS library -->
-    <script src="../lib/angular/angular.min.js"></script>
-    <!-- Include Bootstrap Javascript -->
-    <script src="../js/login.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">Register</div>
-                <div class="panel-body">
-                    <form role="form" ng-submit="saveUser()">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" ng-model="user.username" placeholder="Username" name="username" type="text" id="username" autofocus="" required>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" id="password" value="" required>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" ng-model="user.email" placeholder="E-mail" name="email" type="email" id="email" value="" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Register</button>
-                        </fieldset>
-                    </form>
-                </div>
+<div class="row">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+        <div class="login-panel panel panel-default">
+            <div class="panel-heading">Register</div>
+            <div class="panel-body">
+                <form role="form" ng-submit="insertUserInfo()">
+                    <fieldset>
+                        <div class="form-group">
+                            <input class="form-control" ng-model="user.username" placeholder="Username" name="username" type="text" id="username" autofocus="" required>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" id="password" value="" required>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" ng-model="user.email" placeholder="E-mail" name="email" type="email" id="email" value="" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </fieldset>
+                </form>
             </div>
-        </div><!-- /.col-->
-    </div><!-- /.row -->
+        </div>
+    </div><!-- /.col-->
+</div><!-- /.row -->
 
-    <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">Login</div>
-                <div class="panel-body">
-                    <form role="form" ng-submit="login()">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" ng-model="user.username" placeholder="Username" name="username" type="text" id="username" autofocus="" required>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" id="password" value="" required>
-                            </div>
-                            <button type="submit" class="btn btn-primary">Login</button>
-                        </fieldset>
-                    </form>
-                </div>
+<div class="row">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
+        <div class="login-panel panel panel-default">
+            <div class="panel-heading">Login</div>
+            <div class="panel-body">
+                <form role="form" ng-submit="login()">
+                    <fieldset>
+                        <div class="form-group">
+                            <input class="form-control" ng-model="user.username" placeholder="Username" name="username" type="text" id="username" autofocus="" required>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" ng-model="user.password" placeholder="Password" name="password" type="password" id="password" value="" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </fieldset>
+                </form>
             </div>
-        </div><!-- /.col-->
-    </div><!-- /.row -->
-    </div>
+        </div>
+    </div><!-- /.col-->
+</div><!-- /.row -->
 </body>
-</html>
